<resources>
    <string name="app_name">Tic Tac Toe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exit_app">Exit</string>
    <string name ="reset_match">Reset match</string>
    <string name="reset_score">Reset score</string>
    <string name="cell11"> </string>
    <string name="cell12"> </string>
    <string name="cell13"> </string>
    <string name="cell21"> </string>
    <string name="cell22"> </string>
    <string name="cell23"> </string>
    <string name="cell31"> </string>
    <string name="cell32"> </string>
    <string name="cell33"> </string>
    <string name="the_score">Score:</string>
    <string name="player1_score">sc1</string>
    <string name="line">-</string>
    <string name="player2_score">sc2</string>
</resources>
