<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#FF003B6F">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:background="#010101"
        android:id="@+id/gridLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <com.example.maria.tictactoe.TicTacToeButton
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:text="@string/cell11"
            android:textSize="50sp"
            android:textColor="#010101"
            android:id="@+id/btn11"
            android:layout_row="0"
            android:layout_column="0"
            android:backgroundTint="#d5e5ff"
            android:background="#d5e5ff"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" />

        <com.example.maria.tictactoe.TicTacToeButton
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:text="@string/cell21"
            android:textSize="50sp"
            android:textColor="#010101"
            android:id="@+id/btn21"
            android:layout_row="1"
            android:layout_column="0"
            android:backgroundTint="#d5e5ff"
            android:background="#d5e5ff"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <com.example.maria.tictactoe.TicTacToeButton
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:text="@string/cell12"
            android:textSize="50sp"
            android:textColor="#010101"
            android:id="@+id/btn12"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill_vertical"
            android:backgroundTint="#d5e5ff"
            android:background="#d5e5ff"
            android:layout_marginTop="5dp" />

        <com.example.maria.tictactoe.TicTacToeButton
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:text="@string/cell13"
            android:textSize="50sp"
            android:textColor="#010101"
            android:id="@+id/btn13"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="fill_vertical"
            android:backgroundTint="#d5e5ff"
            android:background="#d5e5ff"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" />

        <com.example.maria.tictactoe.TicTacToeButton
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:text="@string/cell31"
            android:textSize="50sp"
            android:textColor="#010101"
            android:id="@+id/btn31"
            android:layout_row="2"
            android:layout_column="0"
            android:backgroundTint="#d5e5ff"
            android:background="#d5e5ff"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <com.example.maria.tictactoe.TicTacToeButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cell22"
            android:textSize="50sp"
            android:textColor="#010101"
            android:id="@+id/btn22"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:backgroundTint="#d5e5ff"
            android:background="#d5e5ff"
            android:layout_marginTop="5dp" />

        <com.example.maria.tictactoe.TicTacToeButton
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:text="@string/cell23"
            android:textSize="50sp"
            android:textColor="#010101"
            android:id="@+id/btn23"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:backgroundTint="#d5e5ff"
            android:background="#d5e5ff"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" />

        <com.example.maria.tictactoe.TicTacToeButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cell32"
            android:textSize="50sp"
            android:textColor="#010101"
            android:id="@+id/btn32"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:backgroundTint="#d5e5ff"
            android:background="#d5e5ff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <com.example.maria.tictactoe.TicTacToeButton
            android:layout_width="90dp"
            android:layout_height="130dp"
            android:text="@string/cell33"
            android:textSize="50sp"
            android:textColor="#010101"
            android:id="@+id/btn33"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:backgroundTint="#d5e5ff"
            android:background="#d5e5ff"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

    </GridLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myImageView"
        android:src="@mipmap/police_box2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/the_score"
        android:id="@+id/myScore"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#010101"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/player1_score"
        android:id="@+id/player1Score"
        android:textIsSelectable="false"
        android:layout_marginLeft="70dp"
        android:textSize="25dp"
        android:layout_alignTop="@+id/myScore"
        android:layout_toStartOf="@+id/line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/line"
        android:id="@+id/line"
        android:layout_marginLeft="30dp"
        android:textSize="25dp"
        android:layout_alignTop="@+id/myScore"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/player2_score"
        android:id="@+id/player2Score"
        android:layout_marginLeft="30dp"
        android:textSize="25dp"
        android:layout_marginStart="41dp"
        android:layout_alignTop="@+id/line"
        android:layout_toEndOf="@+id/line" />

</RelativeLayout>
